--- a/Claims_Fraud_Classifier_Training.ipynb
+++ b/Claims_Fraud_Classifier_Training.ipynb
@@ -13,23 +13,7 @@
    "execution_count": 1,
    "id": "12eb34cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary cache directory at /tmp/matplotlib-dq9rinnd because the default path (/home/mosaic-ai/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection manager service url initialised to http://fdc-project-manager:80/project-manager\n",
-      "If you need to update its value then update the variable CONNECTION_MANAGER_BASE_URL in os env.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from snowflake.snowpark import Session\n",
     "\n",
@@ -58,8 +42,7 @@
     "from xgboost import XGBClassifier\n",
     "from catboost import CatBoostClassifier\n",
     "\n",
-    "from fosforml import *\n",
-    "from fosforml.constants import MLModelFlavours\n",
+    "from fosforml.model_manager.snowflakesession import get_session\n",
     "import requests"
    ]
   },
@@ -68,7 +51,7 @@
    "id": "05d044b5",
    "metadata": {},
    "source": [
-    "# Read data using FosforIO"
+    "# Read data using FosforML"
    ]
   },
   {
@@ -76,46 +59,18 @@
    "execution_count": 2,
    "id": "fe832748",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection object created: <snowflake.connector.connection.SnowflakeConnection object at 0x7fc0b2953cd0>\n",
-      "Please close the connection after use!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<snowflake.connector.connection.SnowflakeConnection at 0x7fc0b2953cd0>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# To get snowflake connection object with a specific connection name\n",
-    "snowflake.get_connection(connection_name=\"FDC_Insurance_Snowflake\")"
+    "my_session = get_session()\n",
+    "\n",
+    "table_name = 'AUTO_INSURANCE_CLAIMS_DATA'\n",
+    "sf_df = my_session.sql(\"select * from {}\".format(table_name))\n",
+    "df = sf_df.to_pandas()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be431f9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To read a specific dataset published from a snowflake connection\n",
-    "df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA\")\n",
-    "#df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA_PRODUCT\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "6b13ffab",
    "metadata": {},
    "outputs": [
@@ -151,7 +106,6 @@
        "      <th>UMBRELLA_LIMIT</th>\n",
        "      <th>INSURED_ZIP</th>\n",
        "      <th>...</th>\n",
-       "      <th>WITNESSES</th>\n",
        "      <th>POLICE_REPORT_AVAILABLE</th>\n",
        "      <th>TOTAL_CLAIM_AMOUNT_PAID</th>\n",
        "      <th>INJURY_CLAIM</th>\n",
@@ -161,174 +115,175 @@
        "      <th>AUTO_MODEL</th>\n",
        "      <th>AUTO_YEAR</th>\n",
        "      <th>FRAUD_REPORTED</th>\n",
+       "      <th>POLICY_BIND_DATE_CUSTOM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>178</td>\n",
-       "      <td>69</td>\n",
-       "      <td>431670</td>\n",
-       "      <td>12-02-2012</td>\n",
+       "      <td>139</td>\n",
+       "      <td>37</td>\n",
+       "      <td>457069</td>\n",
+       "      <td>17-08-2011</td>\n",
        "      <td>CT</td>\n",
-       "      <td>500/1000</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>2195</td>\n",
-       "      <td>6678588</td>\n",
-       "      <td>617699</td>\n",
+       "      <td>250/500</td>\n",
+       "      <td>1351</td>\n",
+       "      <td>1589</td>\n",
+       "      <td>16139812</td>\n",
+       "      <td>609322</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Police Report Available</td>\n",
-       "      <td>102099.0</td>\n",
-       "      <td>13040.0</td>\n",
-       "      <td>14700.0</td>\n",
-       "      <td>74359.0</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Highlander</td>\n",
-       "      <td>1996</td>\n",
+       "      <td>No Police Report Available</td>\n",
+       "      <td>48182</td>\n",
+       "      <td>538</td>\n",
+       "      <td>20189</td>\n",
+       "      <td>27455</td>\n",
+       "      <td>Dodge</td>\n",
+       "      <td>Neon</td>\n",
+       "      <td>2005</td>\n",
        "      <td>No Fraud Reported</td>\n",
+       "      <td>2011-08-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>235</td>\n",
-       "      <td>48</td>\n",
-       "      <td>452457</td>\n",
-       "      <td>15-06-2004</td>\n",
+       "      <td>292</td>\n",
+       "      <td>52</td>\n",
+       "      <td>429086</td>\n",
+       "      <td>27-09-2010</td>\n",
        "      <td>CT</td>\n",
        "      <td>100/300</td>\n",
-       "      <td>730</td>\n",
-       "      <td>947</td>\n",
-       "      <td>9201803</td>\n",
-       "      <td>434206</td>\n",
+       "      <td>2216</td>\n",
+       "      <td>2669</td>\n",
+       "      <td>15406514</td>\n",
+       "      <td>438830</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
        "      <td>Police Report Available</td>\n",
-       "      <td>65165.0</td>\n",
-       "      <td>21811.0</td>\n",
-       "      <td>6992.0</td>\n",
-       "      <td>36362.0</td>\n",
-       "      <td>Volkswagen</td>\n",
-       "      <td>Passat</td>\n",
-       "      <td>2005</td>\n",
+       "      <td>64579</td>\n",
+       "      <td>11170</td>\n",
+       "      <td>5093</td>\n",
+       "      <td>48316</td>\n",
+       "      <td>Audi</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>1999</td>\n",
        "      <td>No Fraud Reported</td>\n",
+       "      <td>2010-09-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>292</td>\n",
-       "      <td>46</td>\n",
-       "      <td>466074</td>\n",
-       "      <td>20-01-1996</td>\n",
+       "      <td>45</td>\n",
+       "      <td>20</td>\n",
+       "      <td>457562</td>\n",
+       "      <td>13-01-2002</td>\n",
        "      <td>CT</td>\n",
        "      <td>100/300</td>\n",
-       "      <td>1249</td>\n",
-       "      <td>1504</td>\n",
-       "      <td>7764950</td>\n",
-       "      <td>614166</td>\n",
+       "      <td>929</td>\n",
+       "      <td>1290</td>\n",
+       "      <td>5629268</td>\n",
+       "      <td>616164</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Police Report Available</td>\n",
-       "      <td>81875.0</td>\n",
-       "      <td>5613.0</td>\n",
-       "      <td>5109.0</td>\n",
-       "      <td>71153.0</td>\n",
-       "      <td>Ford</td>\n",
-       "      <td>Fusion</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>No Police Report Available</td>\n",
+       "      <td>32420</td>\n",
+       "      <td>538</td>\n",
+       "      <td>845</td>\n",
+       "      <td>31037</td>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>E400</td>\n",
+       "      <td>2014</td>\n",
        "      <td>No Fraud Reported</td>\n",
+       "      <td>2002-01-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>49</td>\n",
        "      <td>67</td>\n",
-       "      <td>41</td>\n",
-       "      <td>485048</td>\n",
-       "      <td>13-12-2012</td>\n",
+       "      <td>471692</td>\n",
+       "      <td>07-02-2012</td>\n",
        "      <td>CT</td>\n",
-       "      <td>100/300</td>\n",
-       "      <td>1584</td>\n",
-       "      <td>1908</td>\n",
-       "      <td>8502385</td>\n",
-       "      <td>473243</td>\n",
+       "      <td>500/1000</td>\n",
+       "      <td>699</td>\n",
+       "      <td>970</td>\n",
+       "      <td>18501194</td>\n",
+       "      <td>445120</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Police Report Available</td>\n",
-       "      <td>68429.0</td>\n",
-       "      <td>308.0</td>\n",
-       "      <td>821.0</td>\n",
-       "      <td>67300.0</td>\n",
-       "      <td>Chevrolet</td>\n",
-       "      <td>Tahoe</td>\n",
-       "      <td>1995</td>\n",
+       "      <td>No Police Report Available</td>\n",
+       "      <td>53780</td>\n",
+       "      <td>7280</td>\n",
+       "      <td>898</td>\n",
+       "      <td>45602</td>\n",
+       "      <td>Suburu</td>\n",
+       "      <td>Legacy</td>\n",
+       "      <td>2005</td>\n",
        "      <td>No Fraud Reported</td>\n",
+       "      <td>2012-02-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>211</td>\n",
-       "      <td>58</td>\n",
-       "      <td>451276</td>\n",
-       "      <td>29-03-1996</td>\n",
+       "      <td>128</td>\n",
+       "      <td>45</td>\n",
+       "      <td>463009</td>\n",
+       "      <td>18-06-2008</td>\n",
        "      <td>CT</td>\n",
-       "      <td>250/500</td>\n",
-       "      <td>1951</td>\n",
-       "      <td>2501</td>\n",
-       "      <td>4083163</td>\n",
-       "      <td>472895</td>\n",
+       "      <td>100/300</td>\n",
+       "      <td>1122</td>\n",
+       "      <td>1384</td>\n",
+       "      <td>16890664</td>\n",
+       "      <td>442936</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>64077.0</td>\n",
-       "      <td>517.0</td>\n",
-       "      <td>1164.0</td>\n",
-       "      <td>62396.0</td>\n",
-       "      <td>Jeep</td>\n",
-       "      <td>Grand Cherokee</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>Fraud Reported</td>\n",
+       "      <td>Police Report Available</td>\n",
+       "      <td>94511</td>\n",
+       "      <td>412</td>\n",
+       "      <td>14545</td>\n",
+       "      <td>79554</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>Escape</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>No Fraud Reported</td>\n",
+       "      <td>2008-06-18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   MONTHS_AS_CUSTOMER CUSTOMER_AGE  POLICY_NUMBER POLICY_BIND_DATE   \n",
-       "0                 178           69         431670       12-02-2012  \\\n",
-       "1                 235           48         452457       15-06-2004   \n",
-       "2                 292           46         466074       20-01-1996   \n",
-       "3                  67           41         485048       13-12-2012   \n",
-       "4                 211           58         451276       29-03-1996   \n",
+       "   MONTHS_AS_CUSTOMER  CUSTOMER_AGE POLICY_NUMBER POLICY_BIND_DATE  \\\n",
+       "0                 139            37        457069       17-08-2011   \n",
+       "1                 292            52        429086       27-09-2010   \n",
+       "2                  45            20        457562       13-01-2002   \n",
+       "3                  49            67        471692       07-02-2012   \n",
+       "4                 128            45        463009       18-06-2008   \n",
        "\n",
-       "  POLICY_STATE POLICY_CSL  POLICY_DEDUCTABLE  POLICY_ANNUAL_PREMIUM   \n",
-       "0           CT   500/1000               1800                   2195  \\\n",
-       "1           CT    100/300                730                    947   \n",
-       "2           CT    100/300               1249                   1504   \n",
-       "3           CT    100/300               1584                   1908   \n",
-       "4           CT    250/500               1951                   2501   \n",
+       "  POLICY_STATE POLICY_CSL  POLICY_DEDUCTABLE  POLICY_ANNUAL_PREMIUM  \\\n",
+       "0           CT    250/500               1351                   1589   \n",
+       "1           CT    100/300               2216                   2669   \n",
+       "2           CT    100/300                929                   1290   \n",
+       "3           CT   500/1000                699                    970   \n",
+       "4           CT    100/300               1122                   1384   \n",
        "\n",
-       "   UMBRELLA_LIMIT INSURED_ZIP  ... WITNESSES  POLICE_REPORT_AVAILABLE   \n",
-       "0         6678588      617699  ...         2  Police Report Available  \\\n",
-       "1         9201803      434206  ...         3  Police Report Available   \n",
-       "2         7764950      614166  ...         3  Police Report Available   \n",
-       "3         8502385      473243  ...         3  Police Report Available   \n",
-       "4         4083163      472895  ...         0                  Unknown   \n",
+       "   UMBRELLA_LIMIT INSURED_ZIP  ...     POLICE_REPORT_AVAILABLE  \\\n",
+       "0        16139812      609322  ...  No Police Report Available   \n",
+       "1        15406514      438830  ...     Police Report Available   \n",
+       "2         5629268      616164  ...  No Police Report Available   \n",
+       "3        18501194      445120  ...  No Police Report Available   \n",
+       "4        16890664      442936  ...     Police Report Available   \n",
        "\n",
-       "  TOTAL_CLAIM_AMOUNT_PAID INJURY_CLAIM PROPERTY_CLAIM  VEHICLE_CLAIM   \n",
-       "0                102099.0      13040.0        14700.0        74359.0  \\\n",
-       "1                 65165.0      21811.0         6992.0        36362.0   \n",
-       "2                 81875.0       5613.0         5109.0        71153.0   \n",
-       "3                 68429.0        308.0          821.0        67300.0   \n",
-       "4                 64077.0        517.0         1164.0        62396.0   \n",
+       "  TOTAL_CLAIM_AMOUNT_PAID INJURY_CLAIM PROPERTY_CLAIM VEHICLE_CLAIM  \\\n",
+       "0                   48182          538          20189         27455   \n",
+       "1                   64579        11170           5093         48316   \n",
+       "2                   32420          538            845         31037   \n",
+       "3                   53780         7280            898         45602   \n",
+       "4                   94511          412          14545         79554   \n",
        "\n",
-       "    AUTO_MAKE      AUTO_MODEL AUTO_YEAR     FRAUD_REPORTED  \n",
-       "0      Toyota      Highlander      1996  No Fraud Reported  \n",
-       "1  Volkswagen          Passat      2005  No Fraud Reported  \n",
-       "2        Ford          Fusion      2006  No Fraud Reported  \n",
-       "3   Chevrolet           Tahoe      1995  No Fraud Reported  \n",
-       "4        Jeep  Grand Cherokee      1995     Fraud Reported  \n",
+       "   AUTO_MAKE  AUTO_MODEL AUTO_YEAR     FRAUD_REPORTED POLICY_BIND_DATE_CUSTOM  \n",
+       "0      Dodge        Neon      2005  No Fraud Reported              2011-08-17  \n",
+       "1       Audi          A3      1999  No Fraud Reported              2010-09-27  \n",
+       "2   Mercedes        E400      2014  No Fraud Reported              2002-01-13  \n",
+       "3     Suburu      Legacy      2005  No Fraud Reported              2012-02-07  \n",
+       "4       Ford      Escape      2013  No Fraud Reported              2008-06-18  \n",
        "\n",
-       "[5 rows x 40 columns]"
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,73 +293,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b09fe6e1",
-   "metadata": {},
-   "source": [
-    "# Read data using Snowflake's Snowpark"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ad93540f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Import all snowflake connection details from Template or Project variables.\n",
-    "db_user = os.getenv('Snowflake_user')\n",
-    "db_password =  os.getenv('Snowflake_password')\n",
-    "db_account = os.getenv('Snowflake_Account')\n",
-    "db_database =  os.getenv('Snowflake_Database')\n",
-    "db_role = os.getenv('Snowflake_user')\n",
-    "db_warehouse = os.getenv('Snowflake_Warehouse')\n",
-    "db_schema = os.getenv('Snowflake_Schema')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "aa95e483",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from snowflake.snowpark.session import Session\n",
-    "connection_params = {\n",
-    "    'user': db_user,\n",
-    "    'password': db_password,\n",
-    "    'account': db_account,\n",
-    "    'warehouse': db_warehouse,\n",
-    "    'database': db_database,\n",
-    "    'schema': db_schema,\n",
-    "    'role': db_role\n",
-    "}\n",
-    "session = Session.builder.configs(connection_params).create()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fef47ad6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.sql('use warehouse FOSFOR_SOLUTIONS_WH;').collect()\n",
-    "session.sql('use database FDC_Insurance;').collect()\n",
-    "session.sql('use schema FDC_Insurance.PUBLIC;').collect()\n",
-    "\n",
-    "df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA')\n",
-    "#df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA_PRODUCT')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "7c86b744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "insurance_claim = df.to_pandas()"
+    "insurance_claim = df.copy()"
    ]
   },
   {
